# notes-parser-next-entry

./: .gitignore  AGENTS.md  CLAUDE.md  DATE_EXTRACTION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MAKEFILE.md  Makefile  NOTES_ROUTING_ARCHITECTURE.md  PIPELINE_README.md  QUICK_TEST.md  README_TESTING.md  SYSTEM_STATUS.md  UPDATE-PARSERS.md  demo_hn_pipeline_simple.py  find-available-port.sh  install-mac.sh  run_pipeline_test.sh  test_pipeline.sh  test_tls_diagnostic.py  test_tls_enforcement.py
nats/: MTLS_SETUP.md  Makefile  README.md  install-mac.sh  nats-server.conf  parser-versions.txt  update-parsers.sh
notes-parser-next-entry/: .gitignore  Makefile  nats_next_listener.py  nats_writer.py  pyproject.toml
notes-parser-next-entry/notes_parser_next_entry.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
notes-parser-next-entry/schemas/: next.schema.json
notes-parser-next-entry/src/: __init__.py  next_parser.py
notes-parser-next-entry/src/notes_parser_next_entry.egg-info/: PKG-INFO  SOURCES.txt
notes-parser-next-entry/tests/: __init__.py  test_next_parser.py
parsers/: README.md  start-all.sh
time-entry-notes-parser/: nats_time_listener.py  nats_writer.py
time-entry-notes-parser/time_entry_notes_parser.egg-info/: SOURCES.txt
