[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-parser-next-entry"
version = "0.1.0"
description = "Parse 'Next' action-list notes from Google Keep"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alvaro Garcia"}
]
keywords = ["next", "parser", "google-keep", "action-items"]
dependencies = [
    "nats-py>=2.6.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
nats-next-listener = "nats_next_listener:main_sync"
nats-next-writer = "nats_writer:main_sync"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
